# cpython

./: ARRAY_BASED_BALANCING_IMPROVEMENTS_REPORT.md  AUTO_REBALANCING_NARYTREE_README.md  FILESYSTEM_COMPARISON_ANALYSIS.md  HOW_TO_RUN_TESTS.md  LINUX_BTREE_COMPARISON_ANALYSIS.md  Makefile.fuse  Makefile.succinct  NARYTREE_AUTO_VS_ORIGINAL_COMPARISON_REPORT.md  NARYTREE_SELF_BALANCING_ANALYSIS_REPORT.md  OCTREE_DEPTH_CAPACITY_TABLE.md  OCTREE_SUBDIVISION_ANALYSIS_REPORT.md  OCTREE_TESTING.md  OCTREE_VS_N8_COMPARISON_ANALYSIS.md  README_Spatial_Data_Structures.md  benchmark_succinct  benchmark_succinct_extended  benchmark_succinct_vs_standard.cpp  comprehensive_5way_filesystem_comparison.py  comprehensive_filesystem_benchmark.py  comprehensive_filesystem_comparison_i7_16gb.py  configure.ac  create_filesystem_summary_chart.py  create_final_comparison.py  create_simple_5way_charts.gp  current_analysis_plot.gp  demo_spatial_modules.py  depth_efficiency_current.txt  depth_efficiency_data.txt  depth_memory_current.txt  depth_memory_data.txt  disk_benchmark  disk_progressive_20250829_87740.csv  disk_progressive_20250829_87740_disk_comparison.gp  disk_storage_benchmark.cpp  efficiency_current_plot.gp  efficiency_plot.gp  filesystem_5way_comparison_20250829_135043.csv  filesystem_5way_comparison_20250829_135043.json  filesystem_5way_fixed.gp  filesystem_5way_simple.gp  (+128 more)
Modules/: HEIGHT_BALANCING_DOCUMENTATION.md  MANIFEST.in  MEMORY_OVERTIME_ANALYSIS_REPORT.md  README.md  README_NaryTree_Implementation.md  README_NaryTree_Testing.md  SELF_BALANCING_SUMMARY_REPORT.md  Setup.stdlib.in  comprehensive_test_report.json  final_comprehensive_balancing_analysis.gp  final_memory_pressure_test_with_balancing.py  final_progressive_plot.gp  integrate_narytree.sh  memory_analysis_summary.txt  memory_data.txt  nary_tree.cpp  nary_tree_array_based.cpp  nary_tree_focused.cpp  nary_tree_hybrid_array.cpp  narytree_cleanup_cycles_20250827_200207.gp  narytree_complete_test_report_20250827_002732.json  narytree_memory_analysis.gp  (+51 more)
(+35 files in other folders)
